--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,8 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="151dp"
-        android:hint="Email" />
+        android:hint="@string/login_email"
+        android:inputType="textEmailAddress"/>
 
     <EditText
         android:id="@+id/loginpass"
@@ -33,7 +34,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="221dp"
-        android:hint="Password"
+        android:hint="@string/lgin_password"
         android:inputType="textPassword" />
 
     <Button
@@ -56,7 +57,7 @@
         android:layout_alignStart="@+id/loginlog"
         android:layout_marginBottom="162dp"
         android:background="@drawable/btn_bg"
-        android:text="Resend EmailLink"
+        android:text="@string/login_resend_email_link"
         android:textColor="@android:color/white"
         android:visibility="invisible" />
 
@@ -67,7 +68,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/loginemail"
         android:layout_marginTop="96dp"
-        android:text="Log  in to your account"
+        android:text="@string/log_in_to_your_account"
         android:textSize="20sp" />
 
 </RelativeLayout>
