--- a/app/src/main/res/layout/single_video_list.xml
+++ b/app/src/main/res/layout/single_video_list.xml
@@ -22,16 +22,17 @@
                 android:layout_height="200dp"
                 android:background="@color/colorPrimary"
                 android:scaleType="fitXY"
-                android:src="@drawable/vinelogo" />
+                android:src="@drawable/vinelogo"
+                android:contentDescription="@string/video_thumbnail_image"/>
 
             <TextView
                 android:id="@+id/video_name"
-                android:layout_width="250dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignTop="@+id/video_date"
                 android:layout_marginStart="5dp"
-                android:text="new tibetan song 2018"
+                android:text="@string/new_tibetan_song_2018_title"
                 android:textColor="@android:color/white" />
 
             <View
@@ -61,7 +62,7 @@
                 android:layout_below="@+id/videodividerleft"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="2dp"
-                android:text="uploader"
+                android:text="@string/uploader_name_activity"
                 android:textColor="@android:color/white" />
 
             <TextView
@@ -72,7 +73,7 @@
                 android:layout_below="@id/video_img"
                 android:layout_marginEnd="5dp"
                 android:layout_marginTop="5dp"
-                android:text="date"
+                android:text="@string/date_date_activity"
                 android:textColor="@android:color/white" />
 
             <TextView
@@ -83,7 +84,7 @@
                 android:layout_below="@+id/videodividerright"
                 android:layout_marginRight="5dp"
                 android:layout_marginTop="2dp"
-                android:text="view count"
+                android:text="@string/view_count_number_text"
 
                 android:textColor="@android:color/white" />
         </RelativeLayout>
