--- a/app/src/main/res/drawable/btn_bg.xml
+++ b/app/src/main/res/drawable/btn_bg.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-<solid android:color="@color/colorAccent"/>
-    <corners android:radius="10dp"/>
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<item android:state_pressed="true">
+    <shape>
+        <solid android:color="@color/colorPrimary"/>
+        <corners android:radius="20dp"/>
+        <stroke android:width="1dp" android:color="@android:color/white"/>
+    </shape>
+
+</item>
+<item>
+    <shape>
+        <solid android:color="@color/colorAccent"/>
+        <corners android:radius="10dp"/>
+    </shape>
+</item>
+</selector>
