--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,39 +12,50 @@
         android:background="@color/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
 
-
-    <EditText
-        android:id="@+id/loginemail"
-        android:layout_width="match_parent"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/emailinputlayout"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="151dp"
-        android:hint="@string/login_email"
-        android:inputType="textEmailAddress"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="138dp"
+        android:textColorHint="@android:color/darker_gray">
 
-    <EditText
-        android:id="@+id/loginpass"
-        android:layout_width="match_parent"
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/loginemail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="@string/login_email"
+            android:inputType="textEmailAddress" />
+
+    </android.support.design.widget.TextInputLayout>
+
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="221dp"
-        android:hint="@string/lgin_password"
-        android:inputType="textPassword" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="209dp"
+        android:textColorHint="@android:color/darker_gray">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/loginpass"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="@string/lgin_password"
+            android:inputType="textPassword" />
+
+    </android.support.design.widget.TextInputLayout>
+
 
     <Button
         android:id="@+id/loginlog"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/emailinputlayout"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="223dp"
-        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="228dp"
         android:background="@drawable/btn_bg"
         android:text="@string/login_register"
         android:textColor="@android:color/white" />
@@ -66,9 +77,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/loginemail"
-        android:layout_marginTop="96dp"
+        android:layout_alignStart="@+id/emailinputlayout"
+        android:layout_marginTop="101dp"
         android:text="@string/log_in_to_your_account"
         android:textSize="20sp" />
+
 
 </RelativeLayout>
