--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeregister"
@@ -9,109 +9,119 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/regtoolbar"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/regemail"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/reg_email_ayout"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="10dp"
         android:ems="10"
-        android:hint="@string/regemail"
-        android:inputType="textEmailAddress|textPersonName"
-        android:textColor="@android:color/black" />
+        android:textColorHint="@android:color/darker_gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5">
 
-    <EditText
-        android:id="@+id/regpassword"
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/regemail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="@string/regemail"
+            android:inputType="textEmailAddress|textPersonName" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayout"
+        android:layout_width="300dp"
+        android:layout_height="59dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:ems="10"
+        android:textColorHint="@android:color/darker_gray"
+        app:layout_constraintEnd_toEndOf="@+id/reg_email_ayout"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/reg_email_ayout"
+        app:layout_constraintTop_toBottomOf="@+id/reg_email_ayout">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/regpassword"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="@string/register_password"
+            android:inputType="textPassword" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayout2"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="182dp"
+        android:layout_marginTop="5dp"
         android:ems="10"
-        android:hint="@string/register_password"
-        android:inputType="textPassword"
-        android:textColor="@android:color/black" />
+        android:textColorHint="@android:color/darker_gray"
+        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
-    <EditText
-        android:id="@+id/regconpassword"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="239dp"
-        android:ems="10"
-        android:hint="Confirm Password"
-        android:inputType="textPassword" />
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/regconpassword"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="@string/_text"
+            android:inputType="textPassword" />
+
+    </android.support.design.widget.TextInputLayout>
+
 
     <Button
         android:id="@+id/regbtn"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/regemail"
+        android:layout_alignEnd="@+id/reg_email_ayout"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="205dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/btn_bg"
         android:text="@string/register_button"
         android:textAllCaps="false"
-        android:textColor="@android:color/white"/>
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.938"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
+        app:layout_constraintVertical_bias="0.045" />
 
-    <Button
-        android:id="@+id/logbtn"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/regemail"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="153dp"
-        android:background="@drawable/btn_bg"
-        android:text="@string/login_register"
-        android:textAllCaps="false"
-        android:textColor="@android:color/white" />
-
-    <TextView
-
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="70dp"
-        android:layout_marginStart="45dp"
-        android:text="Login or register" />
-
-    <TextView
-        android:id="@+id/phonebtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/textView"
-        android:layout_marginEnd="115dp"
-        android:text="via phone "
-        android:textColor="@android:color/holo_blue_dark" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/regemail"
-        android:layout_marginTop="84dp"
-        android:text="Register new account"
-        android:textSize="20sp"/>
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="119dp"
-        android:background="?android:attr/listDivider" />
+        android:layout_alignStart="@+id/reg_email_ayout"
+        android:layout_marginTop="30dp"
+        android:text="@string/register_new_account_register_text"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.125"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/regtoolbar" />
 
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
