--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -18,7 +18,7 @@
         android:fontFamily="@font/adamina"
         android:text="@string/upload_video_file"
         android:textColor="@android:color/white"
-        android:textSize="24dp" />
+        android:textSize="24sp" />
 
     <Button
         android:id="@+id/upload_btn"
@@ -32,7 +32,20 @@
         android:paddingRight="10dp"
         android:text="@string/upload_thumbnail_activity"
         android:textAllCaps="false"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:visibility="invisible" />
+    <Spinner
+        android:id="@+id/spinner_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="119dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark" />
 
     <LinearLayout
         android:id="@+id/progress_layout"
@@ -128,4 +141,5 @@
         android:text="@string/we_recommend_you_to_upload_short_nvideo_for_better_experiences"
         android:textAlignment="center"
         android:textColor="@android:color/white" />
+
 </RelativeLayout>
