--- a/app/src/main/res/layout/single_video_list.xml
+++ b/app/src/main/res/layout/single_video_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:background="@android:color/darker_gray">
+    android:background="@android:color/white">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@android:color/white"
             android:paddingBottom="3dp">
 
             <ImageView
@@ -33,7 +33,7 @@
                 android:layout_alignTop="@+id/video_date"
                 android:layout_marginStart="5dp"
                 android:text="@string/new_tibetan_song_2018_title"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/holo_blue_dark" />
 
             <View
                 android:id="@+id/videodividerleft"
@@ -42,7 +42,7 @@
                 android:layout_below="@+id/video_name"
                 android:layout_marginTop="3dp"
                 android:layout_marginLeft="5dp"
-                android:background="@android:color/white" />
+                android:background="@android:color/black" />
 
             <View
                 android:id="@+id/videodividerright"
@@ -51,7 +51,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="3dp"
                 android:layout_below="@+id/video_name"
-                android:background="@android:color/white"
+                android:background="@android:color/black"
                 android:layout_marginRight="5dp"/>
 
             <TextView
@@ -63,7 +63,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="2dp"
                 android:text="@string/uploader_name_activity"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/holo_blue_dark" />
 
             <TextView
                 android:id="@+id/video_date"
@@ -74,7 +74,7 @@
                 android:layout_marginEnd="5dp"
                 android:layout_marginTop="5dp"
                 android:text="@string/date_date_activity"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/holo_blue_dark" />
 
             <TextView
                 android:id="@+id/view_count"
@@ -86,7 +86,7 @@
                 android:layout_marginTop="2dp"
                 android:text="@string/view_count_number_text"
 
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/holo_blue_dark" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
