--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#673BB7</color>
-    <color name="colorPrimaryDark">#512DA7</color>
+    <color name="colorPrimary">#448AFF</color>
+    <color name="colorPrimaryDark">#1E88E5</color>
     <color name="colorAccent">#FF5521</color>
     <color name="hintColor">#7f7f7f</color>
+    <!--background effect android-->
+    <color name="color1">#9C27B0</color>
+    <color name="color2">#FF4081</color>
+    <color name="color3">#7B1FA2</color>
+    <color name="color4">#F8BBD0</color>
+    <color name="color5">#FF5252</color>
+    <color name="color6">#607D8B</color>
+    <color name="color7">#FF5722</color>
+    <color name="color8">#FFA000</color>
 </resources>
